--- a/css/main.css
+++ b/css/main.css
@@ -269,13 +269,22 @@ ul li {
   background-size: cover;
   min-height: 750px; }
 
-.banner-text {
-  padding-top: 25%; }
+	.banner-text {
+	padding-top: 25%; }
   .banner-text h1 {
     color: #fff;
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
     text-transform: uppercase; }
+
+.work-category-text {
+	padding-top: 25%; }
+  .work-category-text h1 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+	font-size: 30px;
+    text-transform: uppercase; }
+	
   .banner-text p {
     color: #fff;
     font-size: 22px;
